fix word wrapping error/text displaying correctly

--- a/activity/activities.css
+++ b/activity/activities.css
@@ -1,7 +1,8 @@
-body {
+ body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
   }
+  
   main {
     max-width: 600px;
     margin: 40px auto;
@@ -10,8 +11,9 @@ body {
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-  section {
+  form {
     margin-bottom: 20px;
+    
   }
   label {
     display: block;
@@ -24,9 +26,13 @@ body {
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
+    white-space: normal;
+    overflow-wrap: break-word;
+    text-wrap: wrap;
   }
   
   #activity-items {
     height: 9rem;
+    white-space: normal;
+    overflow-wrap: break-word;
   }
-  
